--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textPaises"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="Proyecto Paises"
+        android:background="#673AB7"
+        android:gravity="center_horizontal"
+        android:text="Paises Latam"
+        android:textColor="#FBFAFA"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,8 +26,11 @@
     <TextView
         android:id="@+id/textHabitantes"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
+        android:gravity="center|center_horizontal"
         android:text="TextView"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="@+id/textPaises"
         app:layout_constraintStart_toStartOf="@+id/textPaises"
         app:layout_constraintTop_toBottomOf="@+id/textPaises" />
